<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="#56748E">
	
	<TextView 
		android:text="@string/copyright" 
		android:id="@+id/copyright" 
		android:layout_gravity="right"
		android:textSize="10sp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_marginLeft="15sp" 
		android:layout_marginRight="15sp" 
		android:layout_height="wrap_content"
		android:background="@android:drawable/alert_light_frame">
		<ImageView 
			android:id="@+id/logo" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:src="@drawable/bankdroid_logo"
			android:padding="10sp"
			
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			/>
			
		<TextView 
			android:text="@string/aboutId" 
			android:id="@+id/productId" 
			android:textSize="20sp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			
			android:layout_alignParentTop="true"
			android:layout_toRightOf="@id/logo"
			android:layout_marginTop="10sp"
			/>
			
		<TextView 
			android:text="v1.0" 
			android:id="@+id/version" 
			android:textSize="15sp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			
			android:layout_below="@id/productId"
			android:layout_toRightOf="@id/logo"
			/>
			
		<ImageView
			android:id="@+id/divider"
			android:src="@android:drawable/divider_horizontal_bright"
			android:layout_width="fill_parent"
			android:layout_height="2sp"
			android:scaleType="fitXY"			
			android:layout_below="@id/logo"
			/>
			
		<TextView 
			android:text="@string/aboutDesc" 
			android:id="@+id/description" 
			android:textSize="13sp"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="#000000" 
			android:padding="5sp"
			
			android:layout_below="@id/divider"
			/>
			
		<ImageView
			android:id="@+id/divider2"
			android:src="@android:drawable/divider_horizontal_bright"
			android:layout_width="fill_parent"
			android:layout_height="2sp"
			android:scaleType="fitXY"			
			android:layout_below="@id/description"
			/>
			
		<TextView 
			android:text="@string/aboutUrl2" 
			android:id="@+id/url2" 
			android:textSize="12sp"
			android:gravity="right"
			
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingRight="5sp"
			
			android:layout_below="@id/divider2"
			/>
			
	</RelativeLayout>
		
	
	<Button 
		android:text="@string/btnInfoSite" 
		android:id="@+id/productInfoButton" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		/>

</LinearLayout>
